--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "air-api",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.4.8"
+    "aws-sdk": "^2.1.4",
+    "body-parser": "^1.10.0",
+    "express": "3.4.8",
+    "uuid": "~1.4.1"
   },
-  "devDependencies": {
-    "uuid": "~1.4.1",
-    "mysql": "~2.0.1"
-  }
+  "devDependencies": {}
 }
